Replace MessageUtil.log