@@ -1,5 +1,6 @@
 package de.erethon.factions.building;
 
+import de.erethon.factions.Factions;
 import io.papermc.paper.dialog.Dialog;
 import io.papermc.paper.registry.RegistryBuilderFactory;
 import io.papermc.paper.registry.data.dialog.ActionButton;
@@ -14,10 +15,13 @@ import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.event.ClickCallback;
 import net.kyori.adventure.text.format.NamedTextColor;
 import org.bukkit.Material;
+import org.bukkit.configuration.file.FileConfiguration;
+import org.bukkit.configuration.file.YamlConfiguration;
 import org.bukkit.entity.Player;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class TechTree {
 
@@ -26,36 +30,20 @@ public class TechTree {
     }
 
     public static Dialog createNotice() {
+        String initialText = """
+               §2// This is beautiful
+               §6private void §9show§7(§bPlayer player§7) {
+                   §6player§7.showDialog(§ocreateNotice()§r§7)§7;
+               §7}          
+                """;
         return Dialog.create(builder -> builder.empty()
-                .base(DialogBase.builder(Component.text("notice dialog"))
-                        .body(Arrays.asList(
-                                DialogBody.plainMessage(
-                                        Component.text("body message", NamedTextColor.LIGHT_PURPLE)
-                                ),
-                                DialogBody.item(new ItemStack(Material.STICK))
-                                        .description(DialogBody.plainMessage(Component.text("description message")))
-                                        .build()
-                        ))
-                        .inputs(Arrays.asList(
-                                DialogInput.text("test_text", Component.text("text input"))
-                                        .multiline(TextDialogInput.MultilineOptions.create(null, null))
-                                        .initial("xd")
-                                        .build(),
-                                DialogInput.bool("test_bool", Component.text("boolean input"))
-                                        .build(),
-                                DialogInput.numberRange("test_number", Component.text("number input"), 0.0F, 100.0F)
-                                        .step(1.0F)
-                                        .build(),
-                                DialogInput.singleOption(
-                                                "test_single",
-                                                Component.text("single input"),
-                                                Arrays.asList(
-                                                        SingleOptionDialogInput.OptionEntry.create("A", Component.text("Option A"), false),
-                                                        SingleOptionDialogInput.OptionEntry.create("B", Component.text("Option B"), false),
-                                                        SingleOptionDialogInput.OptionEntry.create("C", Component.text("Option C"), true),
-                                                        SingleOptionDialogInput.OptionEntry.create("D", Component.text("Option D"), false)
-                                                )
-                                        )
+                .base(DialogBase.builder(Component.text("DialogTest.java"))
+                        .inputs(List.of(
+                                DialogInput.text("test_text", Component.text(""))
+                                        .multiline(TextDialogInput.MultilineOptions.create(null, 512))
+                                        .maxLength(Integer.MAX_VALUE)
+                                        .initial("§4")
+                                        .width(800)
                                         .build()
                         ))
                         .build()
@@ -63,7 +51,6 @@ public class TechTree {
                 .type(DialogType.notice(ActionButton.builder(Component.text("button!"))
                         .tooltip(Component.text("cool button yay"))
                         .action(DialogAction.customClick((response, audience) -> {
-                                    audience.sendMessage(Component.text("test_text: " + response.getText("test_text")));
                                     audience.sendMessage(Component.text("test_bool: " + response.getBoolean("test_bool")));
                                     audience.sendMessage(Component.text("test_number: " + response.getFloat("test_number")));
                                     audience.sendMessage(Component.text("test_single: " + response.getText("test_single")));
